Fixed: Execution default of goal org.apache.maven.plugins:maven-failsafe-plugin:2.18.1:integration-test failed: java.lang.NoClassDefFoundError: javax/sql/DataSource: javax.sql.DataSource Added --add-module argument.