@@ -25,7 +25,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- JAVA version -->
-        <java.version>1.9</java.version>
+        <java.version>11</java.version>
 
         <!-- dependencies -->
 
@@ -700,6 +700,7 @@
                         <arg>-Xlint:-rawtypes</arg>
                         <arg>-Xlint:-serial</arg>
                         <arg>-Xlint:-fallthrough</arg>
+                    	<arg>--add-modules</arg><arg>java.sql</arg>
                     </compilerArgs>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
@@ -799,6 +800,7 @@
                     </excludes>
                     <runOrder>random</runOrder>
                     <threadCount>1</threadCount>
+                    <forkCount>0</forkCount>
                     <reuseForks>true</reuseForks>
                     <excludedGroups>
                         net.ripe.db.whois.common.IntegrationTest,
@@ -821,10 +823,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <redirectTestOutputToFile>${test.redirectOutput}</redirectTestOutputToFile>
-                    <argLine>-Xmx1024m -DjvmId=${surefire.forkNumber}</argLine>
+                    <argLine>-Xmx1024m -DjvmId=${surefire.forkNumber} --add-modules java.sql</argLine>
                     <includes>
                         <include>${test.files.integration}</include>
                     </includes>
